--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -17,13 +17,23 @@ import Layout from '../layouts/Layout.astro';
             Coming Soon !!!
           </p>
         </div>
+        <div class="">
         <a
           href="/"
           class="bg-primary-600 dark:bg-primary-400 hover:bg-primary-700 dark:hover:bg-primary-300 focus-visible:outline-primary-600 dark:focus-visible:outline-primary-400 dark:text-primary-950 inline-flex items-center justify-center rounded-sm border border-transparent px-5 py-3 text-base font-medium text-white transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2"
         >
           Go back home
         </a>
+        <span> or </span>
+                <a
+          href="https://blog.lethaldfir.com"
+          class="text-base font-medium text-white underline"
+        >
+          Old blog
+        </a>
+        </div>
       </div>
+      
     </div>
   </section>
 </Layout>
