--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,11 +6,12 @@ import Services from '../components/home/Services.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout
+<!-- Layout
   description="Affordable cyber security solutions for businesses of all sizes. Our DFIR, BEC, and compromise assessments services can help you stay protected without overspending."
 >
   <Hero />
   <Services />
   <Expertise />
   <Cta />
-</Layout>
+</Layout --!>
+
