--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,3 +15,6 @@ import Layout from '../layouts/Layout.astro';
   <Cta />
 </Layout -->
 
+<h1 class= "text-4xl font-mono flex justify-center items-center h-screen">
+Work in Progress
+</h1>
