--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,18 +14,48 @@ import Layout from '../layouts/Layout.astro';
   <Expertise />
   <Cta />
 </Layout -->
-<link href="https//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
-<p class="center">
-Space Invadors destroyed this page! Take revenge on them!
-<br/> Use 
-<span class="label label-danger">Space</span> 
-to shoot and 
-<span class="label label-danger">←</span>&#160;<span class="label label-danger">→</span> to move!&#160;&#160;&#160;<button class="btn btn-default btn-xs" id="restart">Restart</button></p>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon16.png" />
+    <meta name="generator" content={Astro.generator} />
+    <link href="https//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+  </head>
 
-<canvas id="space-invaders"/>
-<!-- h1 class= "text-4xl font-mono flex justify-center items-center h-screen">
-Work in Progress
-</h1-->
+<header class="antialiased">
+  <nav class="bg-white border-gray-200 px-4 lg:px-6 py-4 dark:bg-gray-800">
+      <div class="flex flex-wrap justify-between items-center">
+          <div class="flex justify-start items-center">
+              <a href="https://lethaldfir.com" class="flex mr-4">
+                <img src="/assets/logo.svg" class="mr-4 h-8" alt="lethalDFIR Logo" />
+              </a>
+            </div>
+      <div class="flex font-bold items-center text-4xl bg-gradient-to-r from-blue-600 via-green-500 to-indigo-400 inline-block text-transparent bg-clip-text">
+            Waiting ... 
+      </div>
+      </div>
+  </nav>
+</header>
+
+<div class="flex flex-col justify-center items-center m-8">
+<canvas class="justify-center border-2 p-4 border-black items-center"id="space-invaders"/>
+<p class="justify-between items-center pt-2 flex flex-row">
+<span class="bg-blue-500 border-b-4 border-blue-700 text-white font-bold py-2 px-4 rounded">Space</span>  
+<span class="bg-gray-500 border-b-4 border-gray-700 text-white font-bold py-2 px-4 rounded ml-2 mr-2">
+<svg class="w-6 h-6 text-white dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M13 5H1m0 0 4 4M1 5l4-4"/>
+  </svg>
+</span>
+<span class="bg-gray-500 border-b-4 border-gray-700 text-white font-bold py-2 px-4 rounded mr-2">
+<svg class="w-6 h-6 text-white dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+  </svg>
+</span>
+<button class="bg-red-500 border-b-4 border-red-700 hover:bg-red-700 text-white font-bold py-2 px-4 rounded" id="restart">Restart</button>
+</p>
+</div>
+
 <script>
 ;(function() {
   "use strict";
@@ -39,7 +69,7 @@ Work in Progress
   // Assets
   var invaderCanvas,
     invaderMultiplier,
-    invaderSize = 20,
+    invaderSize = 15,
     initialOffsetInvader,
     invaderAttackRate,
     invaderSpeed,
