work in progress

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,15 +25,15 @@ import Layout from '../layouts/Layout.astro';
 
 <header class="antialiased">
   <nav class="bg-white border-gray-200 px-4 lg:px-6 py-4 dark:bg-gray-800">
-      <div class="flex flex-wrap justify-between items-center">
+      <div class="flex flex-wrap justify-center items-center">
           <div class="flex justify-start items-center">
               <a href="https://lethaldfir.com" class="flex mr-4">
                 <img src="/assets/logo.svg" class="mr-4 h-8" alt="lethalDFIR Logo" />
               </a>
             </div>
-      <div class="flex font-bold items-center text-4xl bg-gradient-to-r from-blue-600 via-green-500 to-indigo-400 inline-block text-transparent bg-clip-text">
+      <!-- div class="hidden lg:flex font-bold items-center text-4xl bg-gradient-to-r from-blue-600 via-green-500 to-indigo-400 inline-block text-transparent bg-clip-text">
             Waiting ... 
-      </div>
+      </div -->
       </div>
   </nav>
 </header>
